# my-openenv

./: .env.example  .gitignore  BLOG.md  Dockerfile  LICENSE  OrgSim_Training.ipynb  README.md  Untitled-3.ipynb  agent_ai.py  app.py  client.py  env.py  grader.py  inference.py  leaderboard.json  make_plots.py  make_plots_out.txt  memory.py  models.py  neural_policy.py  nn_out.txt  openenv.yaml  pip_out.txt  plot_out.txt  plot_training.py  pyproject.toml  requirements.txt  server_log.txt  smoke_test.py  survival_env.py  survival_world.py  tasks.py  train.py
server/: app.py
templates/: index.html
training_curves/: training_data.json
