[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-code-review"
version = "1.1.0"
description = "OpenEnv-style code review benchmark environment for the Meta x PyTorch hackathon."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==3.1.3",
    "gunicorn==23.0.0",
    "openai==2.7.2",
    "openenv-core>=0.2.0",
    "pydantic==2.12.5",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
py-modules = [
    "app",
    "env",
    "grader",
    "inference",
    "memory",
    "models",
    "smoke_test",
    "tasks",
]
