[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orgsim"
version = "2.0.0"
description = "OpenEnv multi-agent survival and crafting RL training environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.1",
    "gunicorn==23.0.0",
    "uvicorn==0.29.0",
    "fastapi==0.111.0",
    "websockets==12.0",
    "a2wsgi==1.10.7",
    "openai==1.51.0",
    "openenv-core>=0.2.0",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "numpy>=1.26.0",
]

[tool.setuptools]
py-modules = [
    "app",
    "client",
    "grader",
    "inference",
    "models",
    "neural_policy",
    "survival_env",
    "survival_world",
    "tasks",
    "train",
]
